fixed shifts

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -327,7 +327,7 @@ nav ul li :hover {
   display: block;
   padding: 0;
   object-position: bottom center;
-  aspect-ratio: 2.74;
+  aspect-ratio: 2.74 / 1;
 }
 
 /* Grid Section (Welcome Section) */
@@ -357,6 +357,8 @@ nav ul li :hover {
 .hero-intro p {
   font-size: 1.8vw;
   padding: 0.5em 0 0;
+  min-height: 10vh;
+  width: 100%:
 }
 
 .hero-join {
@@ -366,6 +368,9 @@ nav ul li :hover {
 .hero-join p {
   font-size: 1.7vw;
   padding: 0.5em 0;
+  min-height: 5vw;
+  height: auto;
+  width: 100%;
 }
 
 .grid2-section2 {
@@ -373,7 +378,7 @@ nav ul li :hover {
   justify-content: center;
   align-items: center;
   max-width: 65vw;
-  width: 52.5vw;
+  width: 45vw;
   height: auto;
   margin: 0 auto;
 }
@@ -1468,6 +1473,7 @@ button.btn5:hover {
     max-width: 100%;
     width: 100%;
     height: auto;
+    min-height: 5vh;
     object-fit: cover;
     aspect-ratio: 1 / 1;
   }
@@ -1765,6 +1771,7 @@ button.btn5:hover {
   main {
     width: 100%;
     max-width: 100vw;
+    height: auto;
   }
 
   .hero-img {
@@ -1793,6 +1800,7 @@ button.btn5:hover {
 
   .grid2-section1 h1 {
     font-size: 5.5vw;
+    height: 505vw;
   }
 
   .hero-join {
@@ -1828,6 +1836,7 @@ button.btn5:hover {
     width: 5vh;
     max-width: 5vh;
     height: auto;
+    transition: all 0.3s ease;
   }
 
   .menu-toggle img {
